[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpt_tools"
version = "0.0.1"
authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]
description = "Simple tools for FPT (fiducial point table) filtering."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy"
]